Se movio tamaño

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </div>
    	<div id="panel_derecho" data-role="panel" data-position="right">
  <div data-role="content"></div>
- 	<h2>Ayuda</h2>
+ 	<h2>Ayudita</h2>
  	<p>Debe seleccionar una de las opciones para mostrar otra interfaz
  	donde mostrara las comidas tipicas para la ocasion</p>
  	 
