Se cambio el tamaño

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <center><h3>¿Qué vas a cocinar hoy?</h3></center>
     <ul id="myitems" data-role="listview" data-filter="true" data-inset="true" >
 
-<li data-theme="a"><a href="#Botones">Entradas</a></li>
+<li data-theme="a"><a href="#Botones">Entrad</a></li>
 <li data-theme="a"><a href="#Sopas">Sopas</a></li>
 <li data-theme="a"><a href="#Comidas">Comidas</a></li>
 <li data-theme="a"><a href="#Desayunos">Desayunos</a></li>
