--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <ul id="myitems" data-role="listview" data-filter="true" data-inset="true" >
 
 <li data-theme="a"><a href="#Botones">Entrad</a></li>
-<li data-theme="a"><a href="#Sopas">Sopas</a></li>
+<li data-theme="a"><a href="#Sopas">Sopa</a></li>
 <li data-theme="a"><a href="#Comidas">Comidas</a></li>
 <li data-theme="a"><a href="#Desayunos">Desayunos</a></li>
 <li data-theme="a"><a href="#Pescados">Pescados y Mariscos</a></li>
