--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <li data-theme="a"><a href="#Botones">Entrad</a></li>
 <li data-theme="a"><a href="#Sopas">Sopa</a></li>
-<li data-theme="a"><a href="#Comidas">Comidas</a></li>
+<li data-theme="a"><a href="#Comidas">Comid</a></li>
 <li data-theme="a"><a href="#Desayunos">Desayunos</a></li>
 <li data-theme="a"><a href="#Pescados">Pescados y Mariscos</a></li>
 <li data-theme="a"><a href="#Mexicano">Platillo Mexicano</a></li>
