Se cambio el color de letra

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <ul id="myitems" data-role="listview" data-filter="true" data-inset="true" >
 
 <li data-theme="a"><a href="#Botones">Entrad</a></li>
-<li data-theme="a"><a href="#Sopas">Sopas</a></li>
-<li data-theme="a"><a href="#Comidas">Comidas</a></li>
-<li data-theme="a"><a href="#Desayunos">Desayunos</a></li>
+<li data-theme="a"><a href="#Sopas">Sopa</a></li>
+<li data-theme="a"><a href="#Comidas">Comid</a></li>
+<li data-theme="a"><a href="#Desayunos">Desayun</a></li>
 <li data-theme="a"><a href="#Pescados">Pescados y Mariscos</a></li>
 <li data-theme="a"><a href="#Mexicano">Platillo Mexicano</a></li>
 <li data-theme="a"><a href="#Pastas">Pastas</a></li>
