--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <li data-theme="a"><a href="#Sopas">Sopa</a></li>
 <li data-theme="a"><a href="#Comidas">Comid</a></li>
 <li data-theme="a"><a href="#Desayunos">Desayun</a></li>
-<li data-theme="a"><a href="#Pescados">Pescados y Mariscos</a></li>
+<li data-theme="a"><a href="#Pescados">Pescados y Ma</a></li>
 <li data-theme="a"><a href="#Mexicano">Platillo Mexicano</a></li>
 <li data-theme="a"><a href="#Pastas">Pastas</a></li>
 <li data-theme="a"><a href="#Ensaladas">Ensaladas</a></li>
